--- a/kustomize/90-applications/all/80-argocd.yaml
+++ b/kustomize/90-applications/all/80-argocd.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/chrisshiels/kubernetes.git
     targetRevision: HEAD
-    path: kustomize/argocd/all
+    path: kustomize/80-argocd/all
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
