--- a/kustomize/15-metallb/stock/kustomization.yaml
+++ b/kustomize/15-metallb/stock/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: longhorn-system
-bases:
-- ../stock
+namespace: metallb-system
 resources:
-- ingress.yaml
+- namespace.yaml
+- metallb.yaml
