--- a/kustomize/20-ingress-nginx/all/patch.yaml
+++ b/kustomize/20-ingress-nginx/all/patch.yaml
@@ -7,6 +7,21 @@ metadata:
 spec:
   replicas: 3
 
+#---
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: ingress-nginx-controller
+#  namespace: ingress-nginx
+#spec:
+#  ports:
+#  - name: http
+#    port: 80
+#    nodePort: 30080
+#  - name: https
+#    port: 443
+#    nodePort: 30443
+
 ---
 apiVersion: v1
 kind: Service
@@ -14,10 +29,5 @@ metadata:
   name: ingress-nginx-controller
   namespace: ingress-nginx
 spec:
-  ports:
-  - name: http
-    port: 80
-    nodePort: 30080
-  - name: https
-    port: 443
-    nodePort: 30443
+  type: LoadBalancer
+  loadBalancerIP: 192.168.121.121
