--- a/kustomize/90-applications/all/15-metallb.yaml
+++ b/kustomize/90-applications/all/15-metallb.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: 30-longhorn
+  name: 15-metallb
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/chrisshiels/kubernetes.git
     targetRevision: HEAD
-    path: kustomize/30-longhorn/all
+    path: kustomize/15-metallb/all
   destination:
     server: https://kubernetes.default.svc
-    namespace: longhorn-system
+    namespace: metallb-system
