--- a/kustomize/90-applications/all/kustomization.yaml
+++ b/kustomize/90-applications/all/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: argocd
 resources:
 - 10-flannel.yaml
+- 15-metallb.yaml
 - 20-ingress-nginx.yaml
 - 30-longhorn.yaml
 - 80-argocd.yaml
