--- a/kustomize/15-metallb/all/kustomization.yaml
+++ b/kustomize/15-metallb/all/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: metallb-system
+commonLabels:
+  "app.kubernetes.io/instance": 15-metallb
 bases:
 - ../stock
 resources:
