--- a/kustomize/10-flannel/all/kustomization.yaml
+++ b/kustomize/10-flannel/all/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kube-system
 commonLabels:
-  "app.kubernetes.io/instance": 10-flannel
+  app.kubernetes.io/instance: 10-flannel
 bases:
 - ../stock
