--- a/kustomize/10-flannel/local/kustomization.yaml
+++ b/kustomize/10-flannel/local/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: ingress-nginx
+namespace: kube-system
 commonLabels:
-  app.kubernetes.io/instance: 20-ingress-nginx
+  app.kubernetes.io/instance: 10-flannel
 bases:
-- ../stock
+- ../all
