--- a/kustomize/50-monitoring/all/kustomization.yaml
+++ b/kustomize/50-monitoring/all/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
 bases:
-- ../_all
+- ../all0
 patchesJSON6902:
 - target:
     version: v1
