--- a/kustomize/15-metallb/all/kustomization.yaml
+++ b/kustomize/15-metallb/all/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: metallb-system
-commonLabels:
-  app.kubernetes.io/instance: 15-metallb
+#commonLabels:
+#  app.kubernetes.io/instance: 15-metallb
 bases:
 - ../stock
