--- a/kustomize/30-longhorn/local/kustomization.yaml
+++ b/kustomize/30-longhorn/local/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: longhorn-system
-commonLabels:
-  app.kubernetes.io/instance: 30-longhorn
+#commonLabels:
+#  app.kubernetes.io/instance: 30-longhorn
 bases:
 - ../all
 resources:
