--- a/kustomize/50-monitoring/all/kustomization.yaml
+++ b/kustomize/50-monitoring/all/kustomization.yaml
@@ -2,15 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
 bases:
-- ../all0
-patchesJSON6902:
-- target:
-    version: v1
-    kind: Service
-    name: prometheus-kube-prometheus-alertmanager
-  path: patch-prometheus-kube-prometheus-alertmanager.yaml
-- target:
-    version: v1
-    kind: Service
-    name: prometheus-kube-prometheus-prometheus
-  path: patch-prometheus-kube-prometheus-prometheus.yaml
+- ../stock
+#patchesJSON6902:
+#- target:
+#    version: v1
+#    kind: Service
+#    name: prometheus-kube-prometheus-alertmanager
+#  path: patch-prometheus-kube-prometheus-alertmanager.yaml
+#- target:
+#    version: v1
+#    kind: Service
+#    name: prometheus-kube-prometheus-prometheus
+#  path: patch-prometheus-kube-prometheus-prometheus.yaml
