--- a/kustomize/80-argocd/all/kustomization.yaml
+++ b/kustomize/80-argocd/all/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
-commonLabels:
-  app.kubernetes.io/instance: 80-argocd
+#commonLabels:
+#  app.kubernetes.io/instance: 80-argocd
 bases:
 - ../stock
 resources:
