--- a/kustomize/15-metallb/local/secret.yaml
+++ b/kustomize/15-metallb/local/secret.yaml
@@ -4,6 +4,8 @@ kind: Secret
 metadata:
   name: memberlist
   namespace: metallb-system
+  labels:
+    app.kubernetes.io/instance: 15-metallb
 type: Opaque
 data:
   secretkey: YWJjZGUxMjM0NQ==
