--- a/kustomize/30-longhorn/local/ingress.yaml
+++ b/kustomize/30-longhorn/local/ingress.yaml
@@ -4,6 +4,8 @@ kind: Ingress
 metadata:
   name: longhorn
   namespace: longhorn-system
+  labels:
+    app.kubernetes.io/instance: 30-longhorn
 spec:
   rules:
   - host: longhorn.local
