--- a/kustomize/20-ingress-nginx/local/patch.yaml
+++ b/kustomize/20-ingress-nginx/local/patch.yaml
@@ -4,6 +4,8 @@ kind: Deployment
 metadata:
   name: ingress-nginx-controller
   namespace: ingress-nginx
+  labels:
+    app.kubernetes.io/instance: 20-ingress-nginx
 spec:
   replicas: 3
 
@@ -13,6 +15,8 @@ spec:
 #metadata:
 #  name: ingress-nginx-controller
 #  namespace: ingress-nginx
+#  labels:
+#    app.kubernetes.io/instance: 20-ingress-nginx
 #spec:
 #  ports:
 #  - name: http
@@ -28,6 +32,8 @@ kind: Service
 metadata:
   name: ingress-nginx-controller
   namespace: ingress-nginx
+  labels:
+    app.kubernetes.io/instance: 20-ingress-nginx
 spec:
   type: LoadBalancer
   loadBalancerIP: 192.168.121.121
