--- a/kustomize/70-application/local/kustomization.yaml
+++ b/kustomize/70-application/local/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: application
+commonLabels:
+  app.kubernetes.io/instance: 70-application
 resources:
 - namespace.yaml
 - elastic.yaml
