--- a/kustomize/70-application/local/elastic.yaml
+++ b/kustomize/70-application/local/elastic.yaml
@@ -20,3 +20,26 @@ spec:
           requests:
             storage: 1Gi
         storageClassName: longhorn-onereplica
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: elasticsearch
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
+spec:
+  rules:
+  - host: elastic.local
+    http:
+      paths:
+      - backend:
+          service:
+            name: application-es-http
+            port:
+              name: https
+        path: /
+        pathType: ImplementationSpecific
