--- a/kustomize/80-argocd/all/patch.yaml
+++ b/kustomize/80-argocd/all/patch.yaml
@@ -9,3 +9,12 @@ metadata:
   namespace: argocd
 spec:
   volumeClaimTemplates: []
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: argocd-cm
+  namespace: argocd
+data:
+  application.instanceLabelKey: argocd.argoproj.io/instance
