--- a/kustomize/70-application/local/elastic.yaml
+++ b/kustomize/70-application/local/elastic.yaml
@@ -19,7 +19,7 @@ spec:
         resources:
           requests:
             storage: 1Gi
-        storageClassName: longhorn-onereplica
+        storageClassName: local-path
 
 ---
 apiVersion: networking.k8s.io/v1
