--- a/kustomize/50-monitoring/all/kustomization.yaml
+++ b/kustomize/50-monitoring/all/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
 bases:
-- ../all0
-patches:
-- patch.yaml
+- ../stock
+resources:
+- namespace.yaml
