Move to kustomize 3.8.1.

--- a/kustomize/65-kafka/all/patch.yaml
+++ b/kustomize/65-kafka/all/patch.yaml
@@ -10,6 +10,5 @@ spec:
       - name: strimzi-cluster-operator
         env:
         - name: STRIMZI_NAMESPACE
-          $patch: delete
-        - name: STRIMZI_NAMESPACE
           value: '*'
+          $patch: replace
