Reorder sub-directories.

--- a/kustomize/45-applications/local/20-sealedsecrets.yaml
+++ b/kustomize/45-applications/local/20-sealedsecrets.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: 80-argocd
-  namespace: argocd
+  name: 20-sealedsecrets
+  namespace: kube-system
 spec:
   project: default
   source:
     repoURL: https://github.com/chrisshiels/kubernetes.git
     targetRevision: HEAD
-    path: kustomize/80-argocd/local
+    path: kustomize/20-sealedsecrets/local
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: kube-system
