--- a/kustomize/45-applications/local/30-metallb.yaml
+++ b/kustomize/45-applications/local/30-metallb.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: 30-longhorn
+  name: 30-metallb
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/chrisshiels/kubernetes.git
     targetRevision: HEAD
-    path: kustomize/30-longhorn/local
+    path: kustomize/30-metallb/local
   destination:
     server: https://kubernetes.default.svc
-    namespace: longhorn-system
+    namespace: metallb-system
