--- a/kustomize/45-applications/local/40-argocd.yaml
+++ b/kustomize/45-applications/local/40-argocd.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: 35-local-path
+  name: 40-argocd
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/chrisshiels/kubernetes.git
     targetRevision: HEAD
-    path: kustomize/35-local-path/local
+    path: kustomize/40-argocd/local
   destination:
     server: https://kubernetes.default.svc
-    namespace: local-path-storage
+    namespace: argocd
