--- a/kustomize/65-elastic/local/elastic.yaml
+++ b/kustomize/65-elastic/local/elastic.yaml
@@ -10,7 +10,7 @@
 #         docker.elastic.co/elasticsearch/elasticsearch:7.12.0 \
 #         bin/elasticsearch-users useradd fluentd -p fluentd -r superuser
 #
-# host$ kubectl -n application \
+# host$ kubectl -n elastic \
 #         create secret --dry-run=client \
 #                 generic filerealm --from-file ./filerealm -o yaml
 ---
@@ -26,7 +26,7 @@ data:
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
-  name: application
+  name: elastic
 spec:
   version: 7.12.0
   auth:
@@ -65,7 +65,7 @@ spec:
       paths:
       - backend:
           service:
-            name: application-es-http
+            name: elastic-es-http
             port:
               name: https
         path: /
@@ -75,12 +75,12 @@ spec:
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
-  name: application
+  name: elastic
 spec:
   version: 7.12.0
   count: 3
   elasticsearchRef:
-    name: application
+    name: elastic
 
 ---
 apiVersion: networking.k8s.io/v1
@@ -99,7 +99,7 @@ spec:
       paths:
       - backend:
           service:
-            name: application-kb-http
+            name: elastic-kb-http
             port:
               name: https
         path: /
