--- a/kustomize/95-kafka/local/kafka.yaml
+++ b/kustomize/95-kafka/local/kafka.yaml
@@ -5,7 +5,10 @@ metadata:
   name: kafka
 spec:
   kafka:
+    version: 2.7.0
     replicas: 3
+    config:
+      log.message.format.version: "2.7"
     listeners:
       - name: plain
         port: 9092
@@ -16,15 +19,28 @@ spec:
         type: internal
         tls: true
     storage:
-      deleteClaim: true
-      size: 10Gi
       type: persistent-claim
-      class: longhorn-onereplica
+      class: longhorn
+      size: 10Gi
+      deleteClaim: true
   zookeeper:
     replicas: 3
     storage:
-      deleteClaim: true
-      size: 10Gi
       type: persistent-claim
-      deleteClaim: false
-      class: longhorn-onereplica
+      class: longhorn
+      size: 10Gi
+      deleteClaim: true
+
+---
+apiVersion: kafka.strimzi.io/v1beta1
+kind: KafkaTopic
+metadata:
+  name: topic
+  labels:
+    strimzi.io/cluster: kafka
+spec:
+  partitions: 1
+  replicas: 1
+  config:
+    retention.ms: 7200000
+    segment.bytes: 1073741824
