--- a/kustomize/45-applications/local/kustomization.yaml
+++ b/kustomize/45-applications/local/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
 - 60-elastic.yaml
 - 65-elastic.yaml
 - 70-fluentd.yaml
+- 75-metrics-server.yaml
 - 80-monitoring.yaml
 - 90-kafka.yaml
 - 95-kafka.yaml
