--- a/kustomize/50-longhorn/all/resource.yaml
+++ b/kustomize/50-longhorn/all/resource.yaml
@@ -5,7 +5,9 @@ metadata:
   name: longhorn-onereplica
 provisioner: driver.longhorn.io
 allowVolumeExpansion: true
+reclaimPolicy: Retain
 parameters:
+  dataLocality: best-effort
   numberOfReplicas: "1"
   staleReplicaTimeout: "2880" # 48 hours in minutes
   fromBackup: ""
