Move metallb-system secret memberlist to stringData.

--- a/kustomize/30-metallb/local/secret.yaml
+++ b/kustomize/30-metallb/local/secret.yaml
@@ -5,5 +5,5 @@ metadata:
   name: memberlist
   namespace: metallb-system
 type: Opaque
-data:
-  secretkey: YWJjZGUxMjM0NQ==
+stringData:
+  secretkey: abcde12345
