--- a/kustomize/45-applications/local/kustomization.yaml
+++ b/kustomize/45-applications/local/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
 - 70-fluentd.yaml
 - 75-metrics-server.yaml
 - 80-monitoring.yaml
+- 85-dashboard.yaml
 - 90-kafka.yaml
 - 95-kafka.yaml
 - 99-hello-kubernetes.yaml
